Fixed several things, particularly horizontal scrollbars

--- a/app/app/index.scss
+++ b/app/app/index.scss
@@ -1,3 +1,9 @@
+@import "styles/fonts.scss";
+
+* {
+  user-select: none;
+}
+
 @media (max-width: 1200px) {
   html, body {
     font-size: 0.8em;
@@ -39,7 +45,7 @@ select {
 
 .main {
   background: white;
-  padding: 0px 10px 5px 45px;
+  padding: 10px 20px 10px 55px;
   width:100%;
 }
 
